--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="js/ui.js"></script>
   <title translate="Pranker Simulator">Симулятор пранкера</title>
   <script src="js/gameloader.js"></script>
-	<link rel="stylesheet" type="text/css" href="style1.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
     <script>window.alert = function(_log){console.log(_log);};
     document.addEventListener('DOMContentLoaded', function() {
 window.unityInstance = UnityLoader.instantiate("unityContainer", "Build/build.json");
